# tinystories

./: .gitignore  pyproject.toml  tinystories_tokenizer.model  tinystories_tokenizer.vocab
experiments/: train.ipynb
tinystories/: data.py  model.py  tokenizer.py  train.py
wandb/: latest-run
wandb/run-20240330_180211-i9sorera/: run-i9sorera.wandb
wandb/run-20240330_180211-i9sorera/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20240330_180529-zm7fj64z/: run-zm7fj64z.wandb
wandb/run-20240330_180529-zm7fj64z/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20240330_215312-0suwki8u/: run-0suwki8u.wandb
wandb/run-20240330_215312-0suwki8u/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
